maze.lessons.maze.island.IslandMaze.scala.error
Escaper:7: error: type mismatch;
 found   : Unit
 required: Boolean
    	if (x=1) {
             ^Escaper:27: error: type mismatch;
 found   : Unit
 required: Boolean
	if (x=5) {
             ^